@@ -4,7 +4,7 @@
  xmlns:xs="http://www.w3.org/2001/XMLSchema"
  elementFormDefault="qualified"
  attributeFormDefault="unqualified"
- version="1.0.13" xml:lang="EN">
+ version="1.0.14" xml:lang="EN">
   <xs:annotation>
     <xs:documentation xml:lang="en">
         XML Schema with all basic element and type definitions used by openModeller.
@@ -31,7 +31,7 @@
 
   <xs:element name="ProjectionParameters" type="ProjectionParametersType"/>
 
-  <xs:element name="AreaStatistics" type="AreaStatisticsType"/>
+  <xs:element name="ProjectionEnvelope" type="ProjectionEnvelopeType"/>
 
   <!-- TYPE DEFINITIIONS -->
 
@@ -303,6 +303,12 @@
           <xs:attribute name="PredictionThreshold" type="xs:double" use="required"/>
         </xs:complexType>
       </xs:element>
+    </xs:sequence>
+  </xs:complexType>
+
+  <xs:complexType name="ProjectionEnvelopeType">
+    <xs:sequence>
+      <xs:element name="AreaStatistics" type="AreaStatisticsType"/>
     </xs:sequence>
   </xs:complexType>
 
